--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -1,20 +1,5 @@
 ﻿[
   {
-    "outputFileName": "js/site.js",
-    "inputFiles": [
-      "js/main.js",
-      "js/jquery-3.1.1.js",
-      "js/modernizr-3.3.1.js",
-      "js/materialize.js",
-      "js/sitewide.js"
-    ],
-    "minify": {
-      "enabled": true,
-      "renameLocals": true
-    },
-    "sourceMap": true
-  },
-  {
     "outputFileName": "css/utils.css",
     "inputFiles": [
       "css/utils/utils.css",
@@ -46,10 +31,11 @@
     "outputFileName": "css/layout.css",
     "inputFiles": [
       "css/layout/layout.css",
-      "css/layout/container.css",
-      "css/layout/nav.css",
+      //"css/layout/container.css",
+      //"css/layout/nav.css",
       "css/layout/header.css",
       "css/layout/content.css",
+      "css/layout/sidebar.css",
       "css/layout/footer.css"
       //"css/layout/responsive.css"
     ],
@@ -64,6 +50,8 @@
     "inputFiles": [
       "css/components/components.css",
       "css/components/buttons.css",
+      //"css/components/scrollbars.css",
+      //"css/components/sliders.css",
       "css/components/icons.css"
     ],
     "minify": {
@@ -76,12 +64,12 @@
     "outputFileName": "css/pages.css",
     "inputFiles": [
       "css/pages/pages.css",
-      "css/pages/home.css",
-      "css/pages/about.css",
-      "css/pages/bios.css",
-      "css/pages/areas.css",
-      "css/pages/contact.css",
-      "css/pages/news_resources.css"
+      "css/pages/home.css"
+      //"css/pages/about.css",
+      //"css/pages/bios.css",
+      //"css/pages/areas.css",
+      //"css/pages/news_resources.css",
+      //"css/pages/contact.css"
     ],
     "minify": {
       "enabled": false,
@@ -97,13 +85,28 @@
       "css/font-awesome.min.css",
       "css/utils.css",
       "css/base.css",
-      "css/layout.css",
       "css/components.css",
+      "css/layout.css",
       "css/pages.css"
     ],
     "minify": {
       "enabled": true,
       "renameLocals": false
+    },
+    "sourceMap": true
+  },
+  {
+    "outputFileName": "js/site.js",
+    "inputFiles": [
+      "js/main.js",
+      "js/jquery-3.1.1.js",
+      "js/modernizr-3.3.1.js",
+      "js/materialize.js",
+      "js/sitewide.js"
+    ],
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
     },
     "sourceMap": true
   }
